--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Short fare document for the flow Mongo => Stitch => Kinesis => Lambda",
   "main": "index.js",
   "scripts": {
-    "test": "standard *.js && tap test/*.test.js"
+    "test": "LOG_LEVEL=silent mocha test --recursive",
+    "cover": "nyc -x test --reporter=lcov --reporter=text node_modules/mocha/bin/_mocha --recursive",
+    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "check-lint": "standard",
+    "fix-lint": "standard --fix"
   },
   "repository": {
     "type": "git",
@@ -18,7 +22,9 @@
   },
   "homepage": "https://github.com/EveryMundo/short-fare#readme",
   "devDependencies": {
-    "standard": "^14.3.1",
-    "tap": "^14.10.6"
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "sinon": "^15.1.2",
+    "standard": "^17.1.0"
   }
 }
